added fit to train/validation, testing outputs

--- a/orig/dogs_cats_redux.ipynb
+++ b/orig/dogs_cats_redux.ipynb
@@ -171,14 +171,14 @@
    ],
    "source": [
     "#Create directories\n",
-    "%cd $DATA_HOME_DIR\n",
-    "%mkdir valid\n",
-    "%mkdir results\n",
-    "%mkdir -p sample/train\n",
-    "%mkdir -p sample/test\n",
-    "%mkdir -p sample/valid\n",
-    "%mkdir -p sample/results\n",
-    "%mkdir -p test/unknown"
+    "#%cd $DATA_HOME_DIR\n",
+    "#%mkdir valid\n",
+    "#%mkdir results\n",
+    "#%mkdir -p sample/train\n",
+    "#%mkdir -p sample/test\n",
+    "#%mkdir -p sample/valid\n",
+    "#%mkdir -p sample/results\n",
+    "#%mkdir -p test/unknown"
    ]
   },
   {
