--- a/orig/dogs_cats_redux.ipynb
+++ b/orig/dogs_cats_redux.ipynb
@@ -54,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -72,20 +70,20 @@
        "u'/home/ubuntu/nbs'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Verify we are in the lesson1 directory\n",
-    "%cd ..\n",
+    "%cd ~/nbs/\n",
     "%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -95,28 +93,14 @@
     "import os, sys\n",
     "current_dir = os.getcwd()\n",
     "LESSON_HOME_DIR = current_dir\n",
-    "DATA_HOME_DIR = current_dir+'/data/dogscats'"
+    "DATA_DIR = current_dir+'/data/dogscats'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING (theano.sandbox.cuda): The cuda backend is deprecated and will be removed in the next release (v0.10).  Please switch to the gpuarray backend. You can get more information about how to switch at this URL:\n",
-      " https://github.com/Theano/Theano/wiki/Converting-to-the-new-gpu-back-end%28gpuarray%29\n",
-      "\n",
-      "Using gpu device 0: Tesla K80 (CNMeM is disabled, cuDNN 5103)\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Allow relative imports to directories above lesson1/\n",
     "sys.path.insert(1, os.path.join(sys.path[0], '..'))\n",
@@ -154,21 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/nbs/data/dogscats\n",
-      "mkdir: cannot create directory ‘valid’: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create directories\n",
     "#%cd $DATA_HOME_DIR\n",
@@ -183,99 +157,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%cd $DATA_HOME_DIR/train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "hidden": true
    },
+   "outputs": [],
+   "source": [
+    "#g = glob('*.jpg')\n",
+    "#shuf = np.random.permutation(g)\n",
+    "#for i in range(2000): os.rename(shuf[i], DATA_HOME_DIR+'/valid/' + shuf[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#from shutil import copyfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#g = glob('*.jpg')\n",
+    "#shuf = np.random.permutation(g)\n",
+    "#for i in range(200): copyfile(shuf[i], DATA_HOME_DIR+'/sample/train/' + shuf[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#%cd $DATA_HOME_DIR/valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#g = glob('*.jpg')\n",
+    "#shuf = np.random.permutation(g)\n",
+    "#for i in range(50): copyfile(shuf[i], DATA_HOME_DIR+'/sample/valid/' + shuf[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/nbs/data/dogscats/train\n"
+      "/home/ubuntu/nbs/data/dogscats\n",
+      "/home/ubuntu/nbs/data/dogscats/sample/\n",
+      "/home/ubuntu/nbs/data/dogscats/test/\n",
+      "/home/ubuntu/nbs/data/dogscats/results/\n",
+      "/home/ubuntu/nbs/data/dogscats/sample//train/\n",
+      "/home/ubuntu/nbs/data/dogscats/sample//valid/\n"
      ]
     }
    ],
    "source": [
-    "%cd $DATA_HOME_DIR/train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-d95e31975ac2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'*.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mshuf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpermutation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshuf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDATA_HOME_DIR\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/valid/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mshuf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
-     ]
-    }
-   ],
-   "source": [
-    "g = glob('*.jpg')\n",
-    "shuf = np.random.permutation(g)\n",
-    "for i in range(2000): os.rename(shuf[i], DATA_HOME_DIR+'/valid/' + shuf[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "from shutil import copyfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "g = glob('*.jpg')\n",
-    "shuf = np.random.permutation(g)\n",
-    "for i in range(200): copyfile(shuf[i], DATA_HOME_DIR+'/sample/train/' + shuf[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "%cd $DATA_HOME_DIR/valid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "g = glob('*.jpg')\n",
-    "shuf = np.random.permutation(g)\n",
-    "for i in range(50): copyfile(shuf[i], DATA_HOME_DIR+'/sample/valid/' + shuf[i])"
+    "%cd $DATA_DIR\n",
+    "\n",
+    "#Set path to sample/ path if desired\n",
+    "path = DATA_DIR + '/sample/' #'/sample/'\n",
+    "test_path = DATA_DIR + '/test/' #We use all the test data\n",
+    "results_path=DATA_DIR + '/results/'\n",
+    "train_path=path + '/train/'\n",
+    "valid_path=path + '/valid/'\n",
+    "\n",
+    "vgg = Vgg16() \n",
+    "print path\n",
+    "print test_path\n",
+    "print results_path\n",
+    "print train_path \n",
+    "print valid_path"
    ]
   },
   {
@@ -291,7 +277,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -327,7 +312,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -347,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%cd $DATA_HOME_DIR\n",
@@ -390,9 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Finetune the model\n",
@@ -407,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Notice we are passing in the validation dataset to the fit() method\n",
@@ -443,7 +421,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -456,7 +433,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -474,7 +450,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -546,9 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "val_batches, probs = vgg.test(valid_path, batch_size = batch_size)"
@@ -573,9 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing import image\n",
@@ -592,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#1. A few correct labels at random\n",
@@ -607,9 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#2. A few incorrect labels at random\n",
@@ -622,9 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#3a. The images we most confident were cats, and are actually cats\n",
@@ -637,9 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#3b. The images we most confident were dogs, and are actually dogs\n",
@@ -652,9 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#4a. The images we were most confident were cats, but are actually dogs\n",
@@ -668,9 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#4b. The images we were most confident were dogs, but are actually cats\n",
@@ -684,9 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#5. The most uncertain labels (ie those with probability closest to 0.5).\n",
@@ -723,9 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot_confusion_matrix(cm, val_batches.class_indices)"
@@ -771,7 +726,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -795,9 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Visualize Log Loss when True value = 1\n",
@@ -823,9 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#So to play it safe, we use a sneaky trick to round down our edge predictions\n",
@@ -858,7 +808,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -871,7 +820,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -885,7 +833,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -906,9 +853,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-py2-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
