neural style that works. K.means addition and removed scaling factor

--- a/redone/neural_style_transfer .ipynb
+++ b/redone/neural_style_transfer .ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "/home/ubuntu/nbs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda2/envs/ml_py3/lib/python3.6/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
    ],
@@ -43,22 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Tell Tensorflow to use no more GPU RAM than necessary\n",
-    "#limit_mem()"
+    "# limit_mem()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -83,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -112,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "resize_to = (500, 350)\n",
     "\n",
-    "vangogh_style = Image.open(dpath + 'van_gogh_03.jpg').resize(resize_to)\n",
-    "leaningtower_content = Image.open(dpath + 'mangrove_bay.JPG').resize(resize_to)\n",
+    "vangogh_style = Image.open(dpath + 'munch.jpeg').resize(resize_to)\n",
+    "leaningtower_content = Image.open(dpath + 'trump.jpg').resize(resize_to)\n",
     "\n",
     "vangogh_style_ar = image_preprocess(vangogh_style)\n",
     "leaningtower_content_ar = image_preprocess(leaningtower_content)\n",
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -175,14 +163,14 @@
     "        c_loss = K.sum(metrics.mse(computed, target))\n",
     "        _, height, width, channels = K.int_shape(computed)\n",
     "    #end\n",
-    "    c_loss = c_loss / (height * width * channels)\n",
+    "    c_loss = c_loss #/ (height * width * channels)\n",
     "    return c_loss\n",
     "#end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -210,14 +198,14 @@
     "        s_loss = K.sum(metrics.mse(gram_matrix(computed), gram_matrix(target)))\n",
     "        _, height, width, channels = K.int_shape(computed)\n",
     "    #end\n",
-    "    s_loss = s_loss / (height * width * channels)\n",
+    "    s_loss = s_loss #/ (height * width * channels)\n",
     "    return s_loss\n",
     "#end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -317,70 +305,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current loss value: 7.14779520035\n",
-      "Current loss value: 6.42948675156\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159603119\n",
-      "Current loss value: 6.44159507751\n",
-      "Current loss value: 6.44159603119\n"
+      "Current loss value: 6514186.0\n",
+      "Current loss value: 3456853.25\n",
+      "Current loss value: 2664727.5\n",
+      "Current loss value: 2318071.5\n",
+      "Current loss value: 2131818.0\n",
+      "Current loss value: 2010079.0\n",
+      "Current loss value: 1925805.75\n",
+      "Current loss value: 1859138.25\n",
+      "Current loss value: 1804408.25\n",
+      "Current loss value: 1760254.75\n"
      ]
     }
    ],
    "source": [
-    "iterations = 50\n",
+    "iterations = 10\n",
     "\n",
     "st_transf_model = vgg_avgpooling(VGG16(include_top=False, input_shape=shp[1:]))\n",
     "\n",
@@ -456,9 +402,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:ml_py3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ml_py3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
