added code to dogs cats ensemble, renamed it, commented code out of mkdir for dogs_cats

--- a/orig/dogscats-ensemble.ipynb
+++ b/orig/dogscats-ensemble.ipynb
@@ -105,10 +105,10 @@
    "source": [
     "In this notebook we're going to create an ensemble of models and use their average as our predictions. For each ensemble, we're going to follow our usual fine-tuning steps:\n",
     "\n",
-    "1) Create a model that retrains just the last layer\n",
-    "2) Add this to a model containing all VGG layers except the last layer\n",
-    "3) Fine-tune just the dense layers of this model (pre-computing the convolutional layers)\n",
-    "4) Add data augmentation, fine-tuning the dense layers without pre-computation.\n",
+    "1. Create a model that retrains just the last layer\n",
+    "2. Add this to a model containing all VGG layers except the last layer\n",
+    "3. Fine-tune just the dense layers of this model (pre-computing the convolutional layers)\n",
+    "4. Add data augmentation, fine-tuning the dense layers without pre-computation.\n",
     "\n",
     "So first, we need to create our VGG model and pre-compute the output of the conv layers:"
    ]
