--- a/redone/dogs_vs_cats.ipynb
+++ b/redone/dogs_vs_cats.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -24,7 +22,6 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -78,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -96,14 +91,15 @@
    "source": [
     "# Create directories\n",
     "%cd $DATA_DIR\n",
-    "%mkdir valid\n",
-    "%mkdir results\n",
-    "%mkdir -p sample/train\n",
-    "%mkdir -p sample/test\n",
-    "%mkdir -p sample/valid\n",
-    "%mkdir -p sample/results\n",
-    "%mkdir -p test/unknown\n",
-    "%cd $DATA_DIR/train\n",
+    "# %mkdir valid\n",
+    "# %mkdir results\n",
+    "# %mkdir -p sample/train\n",
+    "# %mkdir -p sample/test\n",
+    "# %mkdir -p sample/valid\n",
+    "# %mkdir -p sample/results\n",
+    "# %mkdir -p test/unknown\n",
+    "# %cd $DATA_DIR/train\n",
+    "\n",
     "g = glob('*.jpg')\n",
     "shuf = np.random.permutation(g)\n",
     "for i in range(2000): os.rename(shuf[i], DATA_DIR+'/valid/' + shuf[i])\n",
@@ -130,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -165,34 +159,34 @@
    "source": [
     "# Divide cat/dog images into separate directories\n",
     "\n",
-    "%cd $DATA_DIR/sample/train\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
+    "# %cd $DATA_DIR/sample/train\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
     "\n",
-    "%cd $DATA_DIR/sample/valid\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
+    "# %cd $DATA_DIR/sample/valid\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
     "\n",
-    "%cd $DATA_DIR/valid\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
+    "# %cd $DATA_DIR/valid\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
     "\n",
-    "%cd $DATA_DIR/train\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
+    "# %cd $DATA_DIR/train\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
     "\n",
     "\n",
-    "#Create single 'unknown' class for test set\n",
-    "%cd $DATA_DIR/test\n",
-    "%mv *.jpg unknown/"
+    "# #Create single 'unknown' class for test set\n",
+    "# %cd $DATA_DIR/test\n",
+    "# %mv *.jpg unknown/"
    ]
   },
   {
@@ -211,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -261,9 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -289,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -340,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -364,7 +350,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -391,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -483,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Do the fit/predic cycle for vaidation set. Get \n",
+    "1. Do the fit/prediction cycle for vaidation set. \n",
     "2. Get predictions in log prob form \n",
     "3. Convert to rounded up to classes \n",
     "4. Compare against classes already in validation directory \n",
@@ -493,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -515,9 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -607,9 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -640,9 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -673,9 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -706,9 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -740,9 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -773,9 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -806,9 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -839,9 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -883,8 +846,7 @@
    "metadata": {},
    "source": [
     "1. Load back the files into arrays (prediction and the filenames) \n",
-    "2. Calculate the log loss of the probabilities of the predicted the labels\n",
-    "3. "
+    "2. Calculate the log loss of the probabilities of the predicted the labels"
    ]
   },
   {
@@ -902,9 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -927,9 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -960,9 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -984,9 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1011,9 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1059,7 +1011,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1073,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
